edited thirdpage filter styling

--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -76,7 +76,8 @@
 
       <div id="profileDropDownz">
         <aside id="filterContainer" style="display: none">
-          <div>Filters</div>
+          <div id="filterstitle">Filters</div>
+          <span id="line"></span>
           <div id="radioContainer">
             <input type="radio" id="stern" name="filterBtns" value="stern" onclick="findFilter()" />
             <label for="stern">Stern</label><br />
