The profile now shows name and email

--- a/html/profile.html
+++ b/html/profile.html
@@ -48,20 +48,14 @@
 
 
         <div style="justify-self: center;" id="formContainer">
-            <form>
-                <label for="fname">Change name</label><br>
-                <input type="text" id="name" name="fname" value="John"><br>
-                <input type="submit" value="Submit">
-            </form>
-
+            <h3>Name</h3>
+            <p id="name"></p>
             <br>
-            <br>
-            <form>
-                <label for="fname">Change Email</label><br>
-                <input type="text" id="email" name="email" value="John"><br>
-                <input type="submit" value="Submit" onclick="changeEmail()">
-            </form>
+            <h3>Email</h3>
+            <p id="email"></p>
         </div>
+
+        <br>
 
         <div class="buttons">
             <a href="loginPage.html"><button id="logoutButton">Logout</button></a>
