made footer font a little smaller

--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -6,6 +6,10 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="/css/login.css">
+
+    <!--font awesome icons-->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+
     <!-- Bootstrap FirebaseUI CSS -->
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
@@ -23,7 +27,7 @@
 
     <!-- Link to the api keys for your firebase project -->
     <script src="../js/firebaseAPI.js"></script>
-    
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
 </head>
 
@@ -49,6 +53,17 @@
         <div id="loader">Loading...</div>
 
     </div>
+
+    <footer>
+        <div>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-facebook"></i>
+            <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
+                    class="fa fa-users"></i></a>
+        </div>
+
+        <p> nomo © 2021</p>
+    </footer>
 
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
