changed to index.html

--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -35,7 +35,7 @@
         <span class="material-icons-round t1" id="new2"> arrow_back_ios </span>
       </div>
       <div class="name">
-        <a class="logo" href="./firstPageTest.html">nomo</a>
+        <a class="logo" href="./index.html">nomo</a>
       </div>
       <div class="login">
         <a href="#"> <span class="material-icons-round t1" id="new" onclick="showDropdown()"> person </span></a>
