--- a/html/profile.html
+++ b/html/profile.html
@@ -21,7 +21,7 @@
                 </span>
             </div>
             <div class="name">
-                <a class="logo" href="./firstPageTest.html">nomo</a>
+                <a class="logo" href="./index.html">nomo</a>
             </div>
         </div>
         <br>
