--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -32,7 +32,7 @@
     <!--navbar-->
     <div class="navbar">
         <div class="one" onclick="history.back(-1)"></div>
-        <div class="name"><a class="logo" href="./firstPageTest.html">nomo</a> </div>
+        <div class="name"><a class="logo" href="./indexTest.html">nomo</a> </div>
         <div class="login"><a href=""> <span class="material-icons-round">
                     person
                 </span></a>
@@ -77,7 +77,7 @@
                             email: user.email                          //with authenticated user's ID (user.uid)
                         }).then(function () {
                             console.log("New user added to firestore");
-                            window.location.assign("firstPageTest.html");       //re-direct to main.html after signup
+                            window.location.assign("index.html");       //re-direct to main.html after signup
                         })
                             .catch(function (error) {
                                 console.log("Error adding new user: " + error);
@@ -95,7 +95,7 @@
             },
             // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
             signInFlow: 'popup',
-            signInSuccessUrl: 'firstPageTest.html',
+            signInSuccessUrl: 'indexTest.html',
             signInOptions: [
                 firebase.auth.EmailAuthProvider.PROVIDER_ID,
 
