--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -23,7 +23,7 @@
                 </span>
             </div>
             <div class="name">
-                <a class="logo" href="./firstPageTest.html">nomo</a>
+                <a class="logo" href="./index.html">nomo</a>
             </div>
             <div class="login">
                 <a href="#">
