moved all html pages to the main folder

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nomo</title>
-    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="../css/firstPage.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
@@ -62,7 +62,7 @@
         </footer>
     </div>
 
-    <script src="../js/firstPage.js"></script>
+    <script src="/js/firstPage.js"></script>
 </body>
 
 
