--- a/html/profile.html
+++ b/html/profile.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
-    <link rel="stylesheet" href="../css/secondPage.css">
-    <link rel="stylesheet" href="../css/profile.css">
+    <link rel="stylesheet" href="/css/secondPage.css">
+    <link rel="stylesheet" href="/css/profile.css">
     <title>Category</title>
 
     <!-- Bootstrap FirebaseUI CSS -->
@@ -27,7 +27,7 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
 
     <!-- Link to the api keys for your firebase project -->
-    <script src="../js/firebaseAPI.js"></script>
+    <script src="/js/firebaseAPI.js"></script>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                 </span>
             </div>
             <div class="name">
-                <a class="logo" href="./index.html">nomo</a>
+                <a class="logo" href="index.html">nomo</a>
             </div>
         </div>
         <br>
@@ -65,6 +65,6 @@
     </div>
 </body>
 
-<script src="../js/profile.js"></script>
+<script src="/js/profile.js"></script>
 
 </html>
