--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/secondPage.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/secondPage.css">
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <title>Category</title>
@@ -16,9 +16,25 @@
 
     <!--elaine-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Inter:wght@500&display=swap"
+        rel="stylesheet">
+
+    <!-- Firebase 8 CDNs-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+
+    <!-- Link to the api keys for your firebase project -->
+    <script src="/js/firebaseAPI.js"></script>
 </head>
+
 <body>
     <div class="container">
         <div class="navbar">
@@ -28,7 +44,7 @@
                 </span>
             </div>
             <div class="name">
-                <a class="logo" href="./index.html">nomo</a>
+                <a class="logo" href="index.html">nomo</a>
             </div>
             <div class="login">
                 <a href="#">
@@ -81,6 +97,7 @@
     <footer>
         <div>
             <i class="fa fa-twitter"></i>
+            <i class="fab fa-facebook"></i>
             <i class="fa fa-facebook"></i>
             <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
                     class="fa fa-users"></i></a>
@@ -89,7 +106,7 @@
         <p> nomo © 2021</p>
     </footer>
 
-    <script src="../js/secondPage.js"></script>
+    <script src="/js/secondPage.js"></script>
 </body>
 
 
