changed nomo logo in the login page so that matches everything else

--- a/html/index.html
+++ b/html/index.html
@@ -69,6 +69,8 @@
             <div>
                 <i class="fa fa-twitter"></i>
                 <i class="fa fa-facebook"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-facebook-square"></i>
                 <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
                         class="fa fa-users"></i></a>
             </div>
