--- a/loginPage.html
+++ b/loginPage.html
@@ -10,6 +10,10 @@
     <!--font awesome icons-->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 
+    <!--google icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+
     <!-- Bootstrap FirebaseUI CSS -->
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
@@ -28,7 +32,6 @@
     <!-- Link to the api keys for your firebase project -->
     <script src="/js/firebaseAPI.js"></script>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
 </head>
 
 <body>
@@ -37,7 +40,7 @@
     <div class="navbar">
         <div class="one" onclick="history.back(-1)"></div>
         <div class="name"><a class="logo" href="index.html">nomo</a> </div>
-        <div class="login"><a href=""> <span class="material-icons-round">
+        <div class="login"><a href=""> <span class="material-icons-round" id="new">
                     person
                 </span></a>
         </div>
@@ -56,10 +59,16 @@
 
     <footer>
         <div>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-facebook"></i>
-            <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
-                    class="fa fa-users"></i></a>
+            <a href="https://github.com/dennisdkim/goodTeamWinter2021" target="blank" class="bottomicons">
+                <span class="material-icons-outlined">
+                    info
+                    </span>
+            </a>
+            <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank" class="bottomicons">
+                <span class="material-icons-outlined">
+                groups
+                </span>
+            </a>
         </div>
 
         <p> nomo © 2021</p>
