--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/css/profile.css">
     <title>Category</title>
 
+    <!--google icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+
     <!-- Bootstrap FirebaseUI CSS -->
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
@@ -61,8 +65,26 @@
             <a href="loginPage.html"><button id="logoutButton">Logout</button></a>
         </div>
 
-
     </div>
+
+    <footer>
+        <div class="bottomicons">
+            <a href="https://github.com/dennisdkim/goodTeamWinter2021" target="blank" class="bottomicons">
+                <span class="material-icons-outlined">
+                    info
+                    </span>
+            </a>
+            <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank" class="bottomicons">
+                <span class="material-icons-outlined">
+                groups
+                </span>
+            </a>
+        </div>
+
+        <p> nomo © 2021</p>
+    </footer>
+
+
 </body>
 
 <script src="/js/profile.js"></script>
