--- a/secondPageTest.html
+++ b/secondPageTest.html
@@ -14,6 +14,10 @@
     <title>Category</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
+    <!--google icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+    
     <!--elaine-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,12 +99,17 @@
     </div>
 
     <footer>
-        <div>
-            <i class="fa fa-twitter"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fa fa-facebook"></i>
-            <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
-                    class="fa fa-users"></i></a>
+        <div class="bottomicons">
+            <a href="https://github.com/dennisdkim/goodTeamWinter2021" target="blank" class="bottomicons">
+                <span class="material-icons-outlined">
+                    info
+                    </span>
+            </a>
+            <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank" class="bottomicons">
+                <span class="material-icons-outlined">
+                groups
+                </span>
+            </a>
         </div>
 
         <p> nomo © 2021</p>
