--- a/thirdPageTest.html
+++ b/thirdPageTest.html
@@ -11,8 +11,9 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" />
 
-  <!--font awesome icons-->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+  <!--google icons-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 
   <!-- Firebase 8 CDNs-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -101,12 +102,19 @@
 
   <!-- FOOTER -->
   <footer>
-    <div>
-      <i class="fa fa-twitter"></i>
-      <i class="fa fa-facebook"></i>
-      <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
-          class="fa fa-users"></i></a>
-    </div>
+    <div class="bottomicons">
+      <a href="https://github.com/dennisdkim/goodTeamWinter2021" target="blank" class="bottomicons">
+          <span class="material-icons-outlined">
+              info
+              </span>
+      </a>
+      <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank" class="bottomicons">
+          <span class="material-icons-outlined">
+          groups
+          </span>
+      </a>
+  </div>
+
 
     <p>nomo © 2021</p>
   </footer>
